--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "scripts": {
 
     "test": "echo \"Error: no test specified\" && exit 1",
+
     "start": "nodemon index.js"
 
   },
@@ -40,6 +41,8 @@
   "dependencies": {
 
     "@prisma/client": "^4.0.0",
+
+    "bcrypt": "^5.0.1",
 
     "body-parser": "^1.20.0",
 
